--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <textarea name="" id="t" cols="30" rows="10"></textarea>
     
   </center>
+  <br><br><h6 onclick='window.open("tut.html")'>
+    Learn
+  </h6>
   <!-- Project -->
   <script src="main.js"></script>
   <script>
