--- a/tut.html
+++ b/tut.html
@@ -23,7 +23,7 @@
     <textarea name="" id="txt" cols="30" rows="10">
       <script src="https://fozdtx.github.io/format/main.js"></script>
     </textarea><br>
-    <button onclick="con()">Watch tutorial</button>
+    <button onclick='window.open("https://photos.app.goo.gl/7ofQWhz6MfuejAjy6")'>Watch tutorial</button>
     
   </center>
   <br><br>
